# sftools

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mingw  README  README.md  sf3convert.1  sfconvert.cpp  sfont.cpp  sfont.h  xml.cpp  xml.h
